Update page - vaccines.html 33123d6a0d9fb56b574e8841d42f57b159a512bd

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 4, 2021 at 4:25 PM</p>
+            <p class="small-text">Last updated&nbsp;March 4, 2021 at 4:51 PM</p>
           
         </div>
       </div>
@@ -636,7 +636,7 @@
           <li data-label="chartDescription">People partially and fully vaccinated in California</li>
           <li data-label="legendLabel1">People 16+ partially vaccinated</li>
           <li data-label="legendLabel2">People 16+ fully vaccinated</li>
-          <li data-label="barLabel">HPI Quartile </li>
+          <li data-label="barLabel">HPI Quartile {N}</li>
           <li data-label="annotationLeast">Least healthy community conditions</li>
           <li data-label="annotationMost">Most healthy community conditions</li>
           <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}.  &#8220;Partially vaccinated&#8221; represents individuals who have received at least one dose of the Pfizer or Moderna vaccine. &#8220;Fully vaccinated&#8221; represents individuals who have received two doses of the Pfizer or Moderna vaccine, or one dose of the Janssen vaccine. Percentage for number of people calculated as people vaccinated in a quartile divided by population of people 16 years of age and over in a quartile.</li>
