ADD pages/guidancefeed/cdph/86ecca47d5a6387be81deb06fd828573.html 02337b9baaa8e25a71270d695b7b181cd293359d

--- a/ko/latest-news/index.html
+++ b/ko/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19에 대한 최신 뉴스</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 5일 오후 3:10</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 5일 오후 3:32</p>
           
         </div>
       </div>
@@ -171,6 +171,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--46661 -->March 4, 2021</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom today signed an executive order extending authorization for local governments to halt evictions for commercial renters impacted by the COVID-19 pandemic through June 30, 2021. The order...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-075.aspx" lang="en-US" hreflang="en-US" rel="external">​State Updates Blueprint to Allow Additional Activities That Can Be Conducted Outdoors and with Consistent Masking, Which Reduces Risk of COVID-19 Spread for Safe and Sustainable Reopening</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--86ecca47d5a6387be81deb06fd828573 -->March 4, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released updates to the state’s Blueprint for a Safer Economy reopening framework focused on activities that can be conducted outdoors with consistent masking, two...</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
@@ -4111,18 +4119,18 @@
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
-            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-075.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#46)</a>
-          </h2>
-          <p class="card-text" lang="en-US"><small class="text-muted"><!--2d57912f6fb977612aae9c87b98f408d -->May 5, 2020</small></p>
-          <div class="card-text" lang="en-US">The California Department of Public Health today announced the most recent statistics on COVID-19.</div>
-        </div>
-      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
-        <div class="card-body pl-0" lang="en-US">
-          <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-076.aspx" lang="en-US" hreflang="en-US" rel="external">​State Launches CA COVID-19 Testing Sites Website</a>
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--3e5e4c2faa5ed52b673ba60973f73adc -->May 5, 2020</small></p>
           <div class="card-text" lang="en-US">State officials today launched an interactive website to help Californians find COVID-19 community testing sites near them.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-075.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#46)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--2d57912f6fb977612aae9c87b98f408d -->May 5, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health today announced the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
