--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;4:55 م الساعة 5 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;5:42 م الساعة 5 مارس 2021</p>
           
         </div>
       </div>
@@ -179,6 +179,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--86ecca47d5a6387be81deb06fd828573 -->March 4, 2021</small></p>
           <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released updates to the state’s Blueprint for a Safer Economy reopening framework focused on activities that can be conducted outdoors with consistent masking, two...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-076.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#343)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--b8d8d830acdc253b0182bc75e8620294 -->March 4, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
