--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;6 de marzo de 2021 a las 11:39 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;6 de marzo de 2021 a las 12:14 p. m.</p>
           
         </div>
       </div>
