--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 6, 2021 at 12:11 PM</p>
+            <p class="small-text">Last updated&nbsp;March 6, 2021 at 2:08 PM</p>
           
         </div>
       </div>
@@ -319,11 +319,7 @@
 
 
 
-<p>California must end the COVID-19 pandemic as quickly and effectively as possible by vaccinating those&nbsp;most at risk of serious outcomes and those who have been most exposed at work or in their daily lives. This will protect not just those who are vaccinated, but reduce additional community transmission.&nbsp;</p>
-
-
-
-<p>By doubling down on safety measures and targeting vaccines to those who most need them, we can also begin to&nbsp;<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/BlueprintForSaferEconomy.aspx">safely reopen activities</a> across our economy.&nbsp;&nbsp;</p>
+<p>California must end the COVID-19 pandemic as quickly and effectively as possible by vaccinating those most at risk of serious outcomes and those who have been most exposed at work or in their daily lives. This will protect not just those who are vaccinated, but reduce additional community transmission. By targeting vaccines to those who most need them, we can also begin to <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/BlueprintForSaferEconomy.aspx">safely reopen activities</a> across our economy.  </p>
 
 
 
