Update page - vaccines.html e3b4f82b51369c47cadd68b4cdd6ef56f74bae39

--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>News from the Governor&rsquo;s Office</h1>
           
-            <p class="small-text">Last updated&nbsp;March 6, 2021 at 2:54 PM</p>
+            <p class="small-text">Last updated&nbsp;March 7, 2021 at 6:29 AM</p>
           
         </div>
       </div>
@@ -1359,18 +1359,18 @@
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
-            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-329.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#259)</a>
-          </h2>
-          <p class="card-text" lang="en-US"><small class="text-muted"><!--a664d60e6fdc8416c67e0420183dbdd6 -->December 9, 2020</small></p>
-          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today  announced the most recent statistics on COVID-19, including data on intensive care unit (ICU) capacity across the state.</div>
-        </div>
-      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
-        <div class="card-body pl-0" lang="en-US">
-          <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-330.aspx" lang="en-US" hreflang="en-US" rel="external">State Officially Launches CA Notify, a COVID-19 Exposure Notification Tool</a>
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--d44d32263f2a6eba4f4809c6b5d609e0 -->December 9, 2020</small></p>
           <div class="card-text" lang="en-US">Following the announcement by Governor Gavin Newsom to expand CA Notify statewide, the California Department of Health (CDPH) and the California Department of Technology (CDT) today launched the digital tool designed to ...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-329.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#259)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--a664d60e6fdc8416c67e0420183dbdd6 -->December 9, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today  announced the most recent statistics on COVID-19, including data on intensive care unit (ICU) capacity across the state.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
