--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;March 6, 2021 at 2:53 PM</p>
+            <p class="small-text">Last updated&nbsp;March 7, 2021 at 6:29 AM</p>
           
         </div>
       </div>
