--- a/ko/safer-economy/index.html
+++ b/ko/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>더욱 안전한 경제</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 6일 오후 2:53</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 7일 오전 6:29</p>
           
         </div>
       </div>
