--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 6, 2021 sa 2:53 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 7, 2021 sa 6:29 AM</p>
           
         </div>
       </div>
