--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 6, 2021 at 2:08 PM</p>
+            <p class="small-text">Last updated&nbsp;March 7, 2021 at 6:25 AM</p>
           
         </div>
       </div>
@@ -319,7 +319,7 @@
 
 
 
-<p>California must end the COVID-19 pandemic as quickly and effectively as possible by vaccinating those most at risk of serious outcomes and those who have been most exposed at work or in their daily lives. This will protect not just those who are vaccinated, but reduce additional community transmission. By targeting vaccines to those who most need them, we can also begin to <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/BlueprintForSaferEconomy.aspx">safely reopen activities</a> across our economy.  </p>
+<p>California must end the COVID-19 pandemic as quickly and effectively as possible by vaccinating those&nbsp;most at risk of serious outcomes and those who have been most exposed at work or in their daily lives. This will protect not just those who are vaccinated, but reduce additional community transmission.&nbsp;By targeting vaccines to those who most need them, we can also begin to&nbsp;<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/BlueprintForSaferEconomy.aspx">safely reopen activities</a> across our economy.&nbsp;&nbsp;</p>
 
 
 
@@ -515,11 +515,15 @@
 
 
 
-<h3>You cannot get COVID-19 from the vaccine</h3>
+<div style="display:none;" class="js-qa js-qa-question">Can I get a COVID-19 from the COVID-19 vaccine?</div>
 
 
 
-<p>The vaccines do not contain coronavirus and cannot give you COVID-19. If the vaccine you got requires two shots, be sure to get both doses so it can work fully.&nbsp;&nbsp;</p>
+<h3 class="js-qa js-qa-answer">You cannot get COVID-19 from the vaccine</h3>
+
+
+
+<p class="js-qa js-qa-answer">The vaccines do not contain coronavirus and cannot give you COVID-19. If the vaccine you got requires two shots, be sure to get both doses so it can work fully.&nbsp;&nbsp;</p>
 
 
 
