Update translation - 104073776 (#3564) 43b013a3c026cbd79a53ededa263143d03f806ce

--- a/ar/vaccines/index.html
+++ b/ar/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>اللقاحات</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;2:18 م الساعة 4 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;4:51 م الساعة 4 مارس 2021</p>
           
         </div>
       </div>
@@ -570,7 +570,7 @@
 
 
 
-<p>في البداية كان التطعيم مقتصرًا على العاملين في مجال الرعاية الصحية والمقيمين في الرعاية الطويلة الأجل. وبالتالي فإن البيانات تعكس هؤلاء السكان أكثر من غيرهم من بقية سكان كاليفورنيا.</p>
+<p>في البداية كان التطعيم مقتصرًا على العاملين في مجال الرعاية الصحية والمقيمين في الرعاية الطويلة الأجل. وبالتالي فإن البيانات تعكس هؤلاء السكان أكثر من غيرهم من بقية المقيمين كاليفورنيا.</p>
 
 
 
@@ -582,43 +582,43 @@
 
 
 
-<div class="col-lg-10 mx-auto"> <!-- begin tableau embed updated 2/10/2021 --> <div class="tableauPlaceholder" id="viz1612204276802" style="position: relative"><noscript><a href="#"><img alt=" " src="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https://public.tableau.com/"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineDashboardPublic/Vaccine"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1612204276802');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else { vizElement.style.width='100%';vizElement.style.height='850px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> </div>    <!-- BEGIN HPI CHARTS --> <!-- <h3>Vaccination and community health conditions (Vaccine Equity Metric)</h3> 
+<div class="col-lg-10 mx-auto"> <!-- begin tableau embed updated 2/10/2021 --> <div class="tableauPlaceholder" id="viz1612204276802" style="position: relative"><noscript><a href="#"><img alt=" " src="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https://public.tableau.com/"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineDashboardPublic/Vaccine"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1612204276802');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else { vizElement.style.width='100%';vizElement.style.height='850px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> </div>
 
-<p>This graph compares COVID-19 vaccinations among four different levels of community health.</p>
 
-<p>It uses Healthy Places Index (HPI) measures in a zip code area that can impact health, like income, education, and access to health care. Areas are then given a score, ranging from least healthy conditions (Quartile 1) to most healthy conditions (Quartile 4). The Vaccine Equity Metric also creates scores for areas that didn’t have an HPI score.</p>
 
-<p>Data below show the progress of vaccination in each of the four quartiles.</p>
---> <!--
+<h3 class="pt-5">التطعيم والظروف الصحية المجتمعية (مقياس العدالة في توزيع اللقاح)</h3>
+
+<p>ويوزان هذا الرسم البياني لقاحات كوفيد-19 بين أربعة مستويات مختلفة من صحة المجتمع. </p>
+
+<p>فهو يستخدم قياسات <a href="http://healthyplacesindex.org/">مؤشر الأماكن الصحية</a> (HPI) في منطقة الرمز البريدي التي قد تؤثر على الصحة مثل الدخل والتعليم والحصول على الرعاية الصحية. ثم تُعطى المناطق درجة تتراوح من أقل الظروف الصحية للمجتمع (الربع رقم 1) إلى معظم الظروف الصحية للمجتمع (الربع رقم 4). يُقوم مقياس العدالة في توزيع اللقاح أيضًا بوضع درجات للمناطق التي ليس لديها نقاط على مؤشر الأماكن الصحية (HPI). </p><p>   وتُظهر البيانات أدناه التقدم المحرز في التطعيم في كل من الأرباع الأربعة. </p>
+
+
+
 <div class="container">
- <div class="row">
- <cagov-chart-vaccines-hpi-by-people class="chart">
- <ul class="d-none">
- <li data-label="chartTitle">Vaccinations by number of people vaccinated</li>
- <li data-label="chartDescription">People partially and fully vaccinated in California</li>
- <li data-label="legendLabel1">People 16+ partially vaccinated</li>
- <li data-label="legendLabel2">People 16+ fully vaccinated</li>
- <li data-label="barLabel">HPI Quartile {N}</li>
- <li data-label="annotationLeast">Least healthy community conditions</li>
- <li data-label="annotationMost">Most healthy community conditions</li>
- <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. "Partially vaccinated" represents individuals who have received at least one dose of the Pfizer or Moderna vaccine. "Fully vaccinated" represents individuals who have received two doses of the Pfizer or Moderna vaccine, or one dose of the Janssen vaccine.</li>
- </ul>
- </cagov-chart-vaccines-hpi-by-people>
- </div>
- <div class="row">
- <cagov-chart-vaccines-hpi-by-dose class="chart">
- <ul class="d-none">
- <li data-label="chartTitle">Vaccinations by doses administered</li>
- <li data-label="chartDescription">Number of vaccine doses given in California</li>
- <li data-label="legendLabel1">Doses administered</li>
- <li data-label="barLabel">HPI Quartile {N}</li>
- <li data-label="annotationLeast">Least healthy community conditions</li>
- <li data-label="annotationMost">Most healthy community conditions</li>
- <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. Excludes doses without an HPI score, including out-of-state residents or records with missing zip codes.</li>
- </ul>
- </cagov-chart-vaccines-hpi-by-dose>
- </div>
-</div> --> <!-- END HPI CHArts -->    <h3>التطعيم حسب المجموعات</h3>
+  <div class="row">       <cagov-chart-vaccines-hpi-by-people class="chart">         <ul class="d-none">
+          <li data-label="chartTitle">التطعيمات حسب عدد الأشخاص الذين تم تلقيحهم</li>
+          <li data-label="chartDescription">الأشخاص الذين تم تطعيمهم جزئيًا وكليًّا في ولاية كاليفورنيا</li>
+          <li data-label="legendLabel1">الأشخاص الذين يبلغون من العمر 16 عامًا فما فوق وتم تلقيحهم جزئيًّا</li>
+          <li data-label="legendLabel2">الأشخاص الذين يبلغون من العمر 16 عامًا فما فوق وتم تلقيحهم بالكامل</li>
+          <li data-label="barLabel">أرباع مؤشر الأماكن الصحية {N}</li>
+          <li data-label="annotationLeast">أقل الظروف الصحية للمجتمعات المحلية</li>
+          <li data-label="annotationMost">معظم الظروف الصحية للمجتمعات المحلية</li>
+          <li data-label="footerText">تم التحديث في {PUBLISHED_DATE} ببيانات من {LATEST_ADMINISTERED_DATE}.  ويمثل "تلقيحهم جزئيًّا" الأفراد الذين تلقوا على الأقل جرعة واحدة من لقاح Pfizer/فايزر أو مودرنا/Moderna. ويمثل "تلقيحهم كليًّا" الأفراد الذين تلقوا جرعتين من لقاح Pfizer/فايزر أو مودرنا/Moderna أو جرعة لقاح يانسن/Janssen. يتم احتساب النسبة المئوية لعدد الأشخاص الذين تم تلقيحهم في أحد الأرباع مقسومًا على عدد السكان الذين تبلغ أعمارهم 16 فما فوق في أحد الأرباع.</li>
+        </ul>       </cagov-chart-vaccines-hpi-by-people>   </div>
+  <div class="row">       <cagov-chart-vaccines-hpi-by-dose class="chart">         <ul class="d-none">
+          <li data-label="chartTitle">التطعيمات بحسب الجرعات التي تم إعطائها</li>
+          <li data-label="chartDescription">عدد جرعات اللقاح المُعطاة في كاليفورنيا</li>
+          <li data-label="legendLabel1">النسبة المئوية لإجمالي الجرعات المُعطاة وعددها</li>
+          <li data-label="barLabel">أرباع مؤشر الأماكن الصحية {N}</li>
+          <li data-label="annotationLeast">أقل الظروف الصحية للمجتمعات المحلية</li>
+          <li data-label="annotationMost">معظم الظروف الصحية للمجتمعات المحلية</li>
+          <li data-label="footerText">تم التحديث في {PUBLISHED_DATE} ببيانات من {LATEST_ADMINISTERED_DATE}. وتُستثنى الجرعات التي لم تحصل على نقاط مؤشر الأماكن الصحية، بما في ذلك المقيمين خارج الولاية أو السجلات التي فُقدت رموزها البريدية. النسبة المئوية للجرعات المحسوبة كجرعات معطاة في أحد الأرباع مقسومة على مجموع الجرعات الإجمالية المُعطاة على مستوى الولاية.</li>
+        </ul>       </cagov-chart-vaccines-hpi-by-dose>   </div>
+</div>
+
+
+
+<h3>التطعيم حسب المجموعات</h3>
 
 
 
