--- a/es/vaccines/index.html
+++ b/es/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vacunas</h1>
           
-            <p class="small-text">Última actualización&nbsp;4 de marzo de 2021 a las 2:18 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;4 de marzo de 2021 a las 4:51 p. m.</p>
           
         </div>
       </div>
@@ -582,43 +582,43 @@
 
 
 
-<div class="col-lg-10 mx-auto"> <!-- begin tableau embed updated 2/10/2021 --> <div class="tableauPlaceholder" id="viz1612204276802" style="position: relative"><noscript><a href="#"><img alt=" " src="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https://public.tableau.com/"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineDashboardPublic/Vaccine"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1612204276802');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else { vizElement.style.width='100%';vizElement.style.height='850px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> </div>    <!-- BEGIN HPI CHARTS --> <!-- <h3>Vaccination and community health conditions (Vaccine Equity Metric)</h3> 
+<div class="col-lg-10 mx-auto"> <!-- begin tableau embed updated 2/10/2021 --> <div class="tableauPlaceholder" id="viz1612204276802" style="position: relative"><noscript><a href="#"><img alt=" " src="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https://public.tableau.com/"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineDashboardPublic/Vaccine"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1612204276802');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else { vizElement.style.width='100%';vizElement.style.height='850px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> </div>
 
-<p>This graph compares COVID-19 vaccinations among four different levels of community health.</p>
 
-<p>It uses Healthy Places Index (HPI) measures in a zip code area that can impact health, like income, education, and access to health care. Areas are then given a score, ranging from least healthy conditions (Quartile 1) to most healthy conditions (Quartile 4). The Vaccine Equity Metric also creates scores for areas that didn’t have an HPI score.</p>
 
-<p>Data below show the progress of vaccination in each of the four quartiles.</p>
---> <!--
+<h3 class="pt-5">Vacunación y condiciones de salud de la comunidad (indicador de equidad de las vacunas)</h3>
+
+<p>Esta gráfica compara las vacunaciones contra la COVID-19 entre cuatro niveles diferentes de salud comunitaria. </p>
+
+<p>Usa medidas del <a href="http://healthyplacesindex.org/">Índice de Lugares Saludables</a> (Healthy Places Index, HPI) en un área de código postal que pueden afectar la salud, como los ingresos, la educación y el acceso a la atención médica. Después, las áreas reciben una puntuación, que va desde las condiciones comunitarias menos saludables (cuartil 1) hasta las condiciones comunitarias más saludables (cuartil 4). El indicador de equidad de las vacunas también crea puntuaciones para las áreas que no tienen una puntuación del HPI. </p><p>   Los siguientes datos muestran el progreso de la vacunación en cada uno de los cuatro cuartiles. </p>
+
+
+
 <div class="container">
- <div class="row">
- <cagov-chart-vaccines-hpi-by-people class="chart">
- <ul class="d-none">
- <li data-label="chartTitle">Vaccinations by number of people vaccinated</li>
- <li data-label="chartDescription">People partially and fully vaccinated in California</li>
- <li data-label="legendLabel1">People 16+ partially vaccinated</li>
- <li data-label="legendLabel2">People 16+ fully vaccinated</li>
- <li data-label="barLabel">HPI Quartile {N}</li>
- <li data-label="annotationLeast">Least healthy community conditions</li>
- <li data-label="annotationMost">Most healthy community conditions</li>
- <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. "Partially vaccinated" represents individuals who have received at least one dose of the Pfizer or Moderna vaccine. "Fully vaccinated" represents individuals who have received two doses of the Pfizer or Moderna vaccine, or one dose of the Janssen vaccine.</li>
- </ul>
- </cagov-chart-vaccines-hpi-by-people>
- </div>
- <div class="row">
- <cagov-chart-vaccines-hpi-by-dose class="chart">
- <ul class="d-none">
- <li data-label="chartTitle">Vaccinations by doses administered</li>
- <li data-label="chartDescription">Number of vaccine doses given in California</li>
- <li data-label="legendLabel1">Doses administered</li>
- <li data-label="barLabel">HPI Quartile {N}</li>
- <li data-label="annotationLeast">Least healthy community conditions</li>
- <li data-label="annotationMost">Most healthy community conditions</li>
- <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. Excludes doses without an HPI score, including out-of-state residents or records with missing zip codes.</li>
- </ul>
- </cagov-chart-vaccines-hpi-by-dose>
- </div>
-</div> --> <!-- END HPI CHArts -->    <h3>Vacunación por grupos</h3>
+  <div class="row">       <cagov-chart-vaccines-hpi-by-people class="chart">         <ul class="d-none">
+          <li data-label="chartTitle">Vacunación por número de personas vacunadas</li>
+          <li data-label="chartDescription">Personas vacunadas parcial y totalmente en California</li>
+          <li data-label="legendLabel1">Personas mayores de 16 años parcialmente vacunadas</li>
+          <li data-label="legendLabel2">Personas mayores de 16 años completamente vacunadas</li>
+          <li data-label="barLabel">Cuartil del HPI {N}</li>
+          <li data-label="annotationLeast">Condiciones comunitarias menos saludables</li>
+          <li data-label="annotationMost">Condiciones comunitarias más saludables</li>
+          <li data-label="footerText">Se actualizó el {PUBLISHED_DATE} con datos del {LATEST_ADMINISTERED_DATE}.  “Parcialmente vacunados” representa a las personas que han recibido al menos una dosis de la vacuna de Pfizer o Moderna. “Totalmente vacunados” representa a las personas que han recibido dos dosis de la vacuna de Pfizer o Moderna, o una dosis de la vacuna de Janssen. Porcentaje del número de personas calculado como personas vacunadas en un cuartil dividido por la población de personas de 16 años o más de un cuartil.</li>
+        </ul>       </cagov-chart-vaccines-hpi-by-people>   </div>
+  <div class="row">       <cagov-chart-vaccines-hpi-by-dose class="chart">         <ul class="d-none">
+          <li data-label="chartTitle">Vacunas por dosis administradas</li>
+          <li data-label="chartDescription">Número de dosis de vacunas administradas en California</li>
+          <li data-label="legendLabel1">% del total y número de dosis administradas</li>
+          <li data-label="barLabel">Cuartil del HPI {N}</li>
+          <li data-label="annotationLeast">Condiciones comunitarias menos saludables</li>
+          <li data-label="annotationMost">Condiciones comunitarias más saludables</li>
+          <li data-label="footerText">Se actualizó el {PUBLISHED_DATE} con datos del {LATEST_ADMINISTERED_DATE}. Se excluyen las dosis sin una puntuación del HPI, incluidos los residentes de fuera del estado o los registros a los que les faltan códigos postales. Porcentaje de dosis calculado como dosis administradas en un cuartil dividido por las dosis totales administradas en todo el estado.</li>
+        </ul>       </cagov-chart-vaccines-hpi-by-dose>   </div>
+</div>
+
+
+
+<h3>Vacunación por grupos</h3>
 
 
 
