--- a/ar/latest-news/index.html
+++ b/ar/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>آخر الأخبار عن COVID-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:47 م الساعة 7 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;2:02 ص الساعة 8 مارس 2021</p>
           
         </div>
       </div>
