--- a/ko/vaccines/index.html
+++ b/ko/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>백신</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 4일 오후 2:18</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 4일 오후 4:51</p>
           
         </div>
       </div>
@@ -570,7 +570,7 @@
 
 
 
-<p>초기 단계에서 백신 접종은 의료 종사자와 장기 요양자로 제한되었습니다. 이에 따라 본 데이터는 다른 캘리포니아 주민보다 이 집단을 더 많이 반영합니다.</p>
+<p>초기 단계에서 백신 접종은 의료 종사자와 장기 요양자로 제한되었습니다. 이에 따라 본 데이터는 다른 캘리포니아 주민보다 이 인구 집단을 더 많이 반영합니다.</p>
 
 
 
@@ -582,47 +582,47 @@
 
 
 
-<div class="col-lg-10 mx-auto"> <!-- begin tableau embed updated 2/10/2021 --> <div class="tableauPlaceholder" id="viz1612204276802" style="position: relative"><noscript><a href="#"><img alt=" " src="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https://public.tableau.com/"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineDashboardPublic/Vaccine"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1612204276802');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else { vizElement.style.width='100%';vizElement.style.height='850px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> </div>    <!-- BEGIN HPI CHARTS --> <!-- <h3>Vaccination and community health conditions (Vaccine Equity Metric)</h3> 
+<div class="col-lg-10 mx-auto"> <!-- begin tableau embed updated 2/10/2021 --> <div class="tableauPlaceholder" id="viz1612204276802" style="position: relative"><noscript><a href="#"><img alt=" " src="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https://public.tableau.com/"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineDashboardPublic/Vaccine"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1612204276802');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else { vizElement.style.width='100%';vizElement.style.height='850px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> </div>
 
-<p>This graph compares COVID-19 vaccinations among four different levels of community health.</p>
 
-<p>It uses Healthy Places Index (HPI) measures in a zip code area that can impact health, like income, education, and access to health care. Areas are then given a score, ranging from least healthy conditions (Quartile 1) to most healthy conditions (Quartile 4). The Vaccine Equity Metric also creates scores for areas that didn’t have an HPI score.</p>
 
-<p>Data below show the progress of vaccination in each of the four quartiles.</p>
---> <!--
+<h3 class="pt-5">백신 접종 및 지역 사회 보건 여건(백신 공평성 메트릭)</h3>
+
+<p>이 그래프는 4가지의 상이한 지역 사회 보건 수준에 대한 COVID-19 백신 접종에 대해 비교합니다. </p>
+
+<p>여기에는 소득와 교육, 의료 접근성 등 건강에 영향을 미칠 수 있는 우편 번호 지역 내 <a href="http://healthyplacesindex.org/">건강한 장소 지수</a>(Healthy Places Index, HPI) 수치가 사용됩니다. 다음에 최저 지역 사회 보건 여건(제1사분위)부터 최고 지역 사회 보건 여건(제4사분위)까지의 범위에 해당하는 점수를 지역에  부여합니다. 또한 백신 형평성 메트릭을 통해 HPI 점수가 없는 지역에 대한 점수를 산출합니다. </p><p>   아래 데이터는 4가지의 사분위 별 백신 접종 진행 상황을 나타냅니다. </p>
+
+
+
 <div class="container">
- <div class="row">
- <cagov-chart-vaccines-hpi-by-people class="chart">
- <ul class="d-none">
- <li data-label="chartTitle">Vaccinations by number of people vaccinated</li>
- <li data-label="chartDescription">People partially and fully vaccinated in California</li>
- <li data-label="legendLabel1">People 16+ partially vaccinated</li>
- <li data-label="legendLabel2">People 16+ fully vaccinated</li>
- <li data-label="barLabel">HPI Quartile {N}</li>
- <li data-label="annotationLeast">Least healthy community conditions</li>
- <li data-label="annotationMost">Most healthy community conditions</li>
- <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. "Partially vaccinated" represents individuals who have received at least one dose of the Pfizer or Moderna vaccine. "Fully vaccinated" represents individuals who have received two doses of the Pfizer or Moderna vaccine, or one dose of the Janssen vaccine.</li>
- </ul>
- </cagov-chart-vaccines-hpi-by-people>
- </div>
- <div class="row">
- <cagov-chart-vaccines-hpi-by-dose class="chart">
- <ul class="d-none">
- <li data-label="chartTitle">Vaccinations by doses administered</li>
- <li data-label="chartDescription">Number of vaccine doses given in California</li>
- <li data-label="legendLabel1">Doses administered</li>
- <li data-label="barLabel">HPI Quartile {N}</li>
- <li data-label="annotationLeast">Least healthy community conditions</li>
- <li data-label="annotationMost">Most healthy community conditions</li>
- <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. Excludes doses without an HPI score, including out-of-state residents or records with missing zip codes.</li>
- </ul>
- </cagov-chart-vaccines-hpi-by-dose>
- </div>
-</div> --> <!-- END HPI CHArts -->    <h3>집단별 백신 접종</h3>
+  <div class="row">       <cagov-chart-vaccines-hpi-by-people class="chart">         <ul class="d-none">
+          <li data-label="chartTitle">백신 접종자 수로 보는 백신 접종 상황</li>
+          <li data-label="chartDescription">캘리포니아 내 1차 및 2차 백신 접종자</li>
+          <li data-label="legendLabel1">16세 이상 1차 백신 접종자</li>
+          <li data-label="legendLabel2">16세 이상 2차 백신 접종자</li>
+          <li data-label="barLabel">HPI 사분위(N)</li>
+          <li data-label="annotationLeast">최저 지역 사회 보건 여견</li>
+          <li data-label="annotationMost">최고 지역 사회 보건 여견</li>
+          <li data-label="footerText">{LATEST_ADMINISTERED_DATE} 일자 데이터 기준 {PUBLISHED_DATE} 업데이트.  “1차 접종자”는 최소 1차 Pfizer 또는 Moderna 백신을 접종받은 개인을 말합니다. “2차 접종자”는 2차 Pfizer 또는 Moderna 백신이나 1차 Janssen 백신을 접종받은 개인을 말합니다. 사분위 내 백신 접종자로 계산한 인원 수를 사분위 내 16세 이상 인구 수로 나눈 백분율.</li>
+        </ul>       </cagov-chart-vaccines-hpi-by-people>   </div>
+  <div class="row">       <cagov-chart-vaccines-hpi-by-dose class="chart">         <ul class="d-none">
+          <li data-label="chartTitle">투여 백신 대비 백신 접종 수</li>
+          <li data-label="chartDescription">캘리포니아 내 백신 접종 건수</li>
+          <li data-label="legendLabel1">투여한 백신의 전체 대비 % 및 건수</li>
+          <li data-label="barLabel">HPI 사분위(N)</li>
+          <li data-label="annotationLeast">최저 지역 사회 보건 여견</li>
+          <li data-label="annotationMost">최고 지역 사회 보건 여견</li>
+          <li data-label="footerText">{LATEST_ADMINISTERED_DATE} 일자 데이터 기준 {PUBLISHED_DATE} 업데이트. 타주 주민 또는 우편 번호가 누락된 기록을 포함하여 HPI 점수가 없는 백신 제외. 사분위내 백신 투여자를 주 전체 백신 투여자로 나눈 백신 백분율.</li>
+        </ul>       </cagov-chart-vaccines-hpi-by-dose>   </div>
+</div>
 
 
 
-<p>인종, 민족, 연령 및 성별로 1회차 백신 접종 분포가 아래에 나와 있습니다. 본 정보는 자발적으로 제공하며 백신 접종에 필요한 요건은 아닙니다. </p>
+<h3>집단별 백신 접종</h3>
+
+
+
+<p>인종, 민족, 연령 및 성별로 1회차 백신 접종 분포가 아래에 나와 있습니다. 본 정보 제공은 자발적이며 백신 접종에 대한 필수 사항은 아닙니다. </p>
 
 
 
