--- a/zh-hans/vaccines/index.html
+++ b/zh-hans/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>疫苗</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月4日, 下午2:18</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月4日, 下午4:51</p>
           
         </div>
       </div>
@@ -578,47 +578,47 @@
 
 
 
-<h3 id="Vaccine-administration-by-county-of-residence">各居住县的疫苗施打情况</h3>
+<h3 id="Vaccine-administration-by-county-of-residence">各居住县的疫苗接种情况</h3>
 
 
 
-<div class="col-lg-10 mx-auto"> <!-- begin tableau embed updated 2/10/2021 --> <div class="tableauPlaceholder" id="viz1612204276802" style="position: relative"><noscript><a href="#"><img alt=" " src="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https://public.tableau.com/"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineDashboardPublic/Vaccine"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1612204276802');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else { vizElement.style.width='100%';vizElement.style.height='850px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> </div>    <!-- BEGIN HPI CHARTS --> <!-- <h3>Vaccination and community health conditions (Vaccine Equity Metric)</h3> 
+<div class="col-lg-10 mx-auto"> <!-- begin tableau embed updated 2/10/2021 --> <div class="tableauPlaceholder" id="viz1612204276802" style="position: relative"><noscript><a href="#"><img alt=" " src="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1_rss.png" style="border: none"></a></noscript><object class="tableauViz" style="display:none;"><param name="host_url" value="https://public.tableau.com/"> <param name="embed_code_version" value="3"> <param name="site_root" value=""><param name="name" value="COVID-19VaccineDashboardPublic/Vaccine"><param name="tabs" value="no"><param name="toolbar" value="yes"><param name="static_image" value="https://public.tableau.com/static/images/CO/COVID-19VaccineDashboardPublic/Vaccine/1.png"> <param name="animate_transition" value="yes"><param name="display_static_image" value="yes"><param name="display_spinner" value="yes"><param name="display_overlay" value="yes"><param name="display_count" value="yes"><param name="language" value="en"><param name="filter" value="publish=yes"></object></div>                <script type="text/javascript">                    var divElement = document.getElementById('viz1612204276802');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='500px';vizElement.style.maxWidth='800px';vizElement.style.width='100%';vizElement.style.height='550px';} else { vizElement.style.width='100%';vizElement.style.height='850px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script> <!-- end tableau embed --> </div>
 
-<p>This graph compares COVID-19 vaccinations among four different levels of community health.</p>
 
-<p>It uses Healthy Places Index (HPI) measures in a zip code area that can impact health, like income, education, and access to health care. Areas are then given a score, ranging from least healthy conditions (Quartile 1) to most healthy conditions (Quartile 4). The Vaccine Equity Metric also creates scores for areas that didn’t have an HPI score.</p>
 
-<p>Data below show the progress of vaccination in each of the four quartiles.</p>
---> <!--
+<h3 class="pt-5">疫苗接种和社区健康状况（疫苗公平指标）</h3>
+
+<p>此图表比较了社区健康的四个不同等级中的新型冠状病毒疫苗的接种情况。 </p>
+
+<p>其在有邮政编码的地区中使用<a href="http://healthyplacesindex.org/">健康地方指数</a> (Healthy Places Index, HPI)，衡量能影响健康的各个方面，例如收入、教育和获得医疗保健的机会。经衡量后为该地区评分，评分范围从社区状况最不健康（第1个四分位数）至社区状况最健康（第4个四分位数）。此疫苗公平指标亦可以为没有HPI评分的地区评分。 </p><p>下列数据表示四个四分位数各自的疫苗接种进度。 </p>
+
+
+
 <div class="container">
- <div class="row">
- <cagov-chart-vaccines-hpi-by-people class="chart">
- <ul class="d-none">
- <li data-label="chartTitle">Vaccinations by number of people vaccinated</li>
- <li data-label="chartDescription">People partially and fully vaccinated in California</li>
- <li data-label="legendLabel1">People 16+ partially vaccinated</li>
- <li data-label="legendLabel2">People 16+ fully vaccinated</li>
- <li data-label="barLabel">HPI Quartile {N}</li>
- <li data-label="annotationLeast">Least healthy community conditions</li>
- <li data-label="annotationMost">Most healthy community conditions</li>
- <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. "Partially vaccinated" represents individuals who have received at least one dose of the Pfizer or Moderna vaccine. "Fully vaccinated" represents individuals who have received two doses of the Pfizer or Moderna vaccine, or one dose of the Janssen vaccine.</li>
- </ul>
- </cagov-chart-vaccines-hpi-by-people>
- </div>
- <div class="row">
- <cagov-chart-vaccines-hpi-by-dose class="chart">
- <ul class="d-none">
- <li data-label="chartTitle">Vaccinations by doses administered</li>
- <li data-label="chartDescription">Number of vaccine doses given in California</li>
- <li data-label="legendLabel1">Doses administered</li>
- <li data-label="barLabel">HPI Quartile {N}</li>
- <li data-label="annotationLeast">Least healthy community conditions</li>
- <li data-label="annotationMost">Most healthy community conditions</li>
- <li data-label="footerText">Updated {PUBLISHED_DATE} with data from {LATEST_ADMINISTERED_DATE}. Excludes doses without an HPI score, including out-of-state residents or records with missing zip codes.</li>
- </ul>
- </cagov-chart-vaccines-hpi-by-dose>
- </div>
-</div> --> <!-- END HPI CHArts -->    <h3>各群体的疫苗接种情况</h3>
+  <div class="row">       <cagov-chart-vaccines-hpi-by-people class="chart">         <ul class="d-none">
+          <li data-label="chartTitle">基于已接种人数的疫苗接种情况</li>
+          <li data-label="chartDescription">未完全接种疫苗和完全接种疫苗的加州民众</li>
+          <li data-label="legendLabel1">年满16岁且未完全接种疫苗的民众</li>
+          <li data-label="legendLabel2">年满16岁且完全接种疫苗的民众</li>
+          <li data-label="barLabel">HPI四分位数 {N}</li>
+          <li data-label="annotationLeast">社区状况最不健康</li>
+          <li data-label="annotationMost">社区状况最健康</li>
+          <li data-label="footerText">使用来自{LATEST_ADMINISTERED_DATE}的数据更新{PUBLISHED_DATE}。“未完全接种”表示至少已接种一剂Pfizer或Moderna疫苗。“完全接种”表示已接种两剂Pfizer或Moderna疫苗，或一剂Janssen疫苗。人数的百分比计算方式为：各个四分位数中已接种的人数除以该四分位数中年满16岁人数。</li>
+        </ul>       </cagov-chart-vaccines-hpi-by-people>   </div>
+  <div class="row">       <cagov-chart-vaccines-hpi-by-dose class="chart">         <ul class="d-none">
+          <li data-label="chartTitle">基于已接种剂量的疫苗接种情况</li>
+          <li data-label="chartDescription">已在加州接种的疫苗数量</li>
+          <li data-label="legendLabel1">总数的%及接种的剂量</li>
+          <li data-label="barLabel">HPI四分位数 {N}</li>
+          <li data-label="annotationLeast">社区状况最不健康</li>
+          <li data-label="annotationMost">社区状况最健康</li>
+          <li data-label="footerText">使用来自{LATEST_ADMINISTERED_DATE}的数据更新{PUBLISHED_DATE}。排除没有HPI评分的剂量，包括州外居民或没有邮政编码的记录。剂量的百分比计算方式为：各个四分位数中已接种的剂量数除以全州范围内接种的总剂量数。</li>
+        </ul>       </cagov-chart-vaccines-hpi-by-dose>   </div>
+</div>
+
+
+
+<h3>基于各群体的疫苗接种情况</h3>
 
 
 
