--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">最近更新&nbsp;March 7, 2021 at 12:47 PM</p>
+            <p class="small-text">最近更新&nbsp;March 8, 2021 at 2:02 AM</p>
           
         </div>
       </div>
