--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 7, 2021 at 6:25 AM</p>
+            <p class="small-text">Last updated&nbsp;March 8, 2021 at 6:40 AM</p>
           
         </div>
       </div>
@@ -846,7 +846,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>Two doses for the Pfizer/BioNTech vaccine, 21 days apart</li><li>Two doses for the Moderna vaccine, 28 days apart</li><li>One dose for the One dose for the Johnson &amp; Johnson’s Janssen vaccine</li></ul>
+            <ul><li>Two doses for the Pfizer/BioNTech vaccine, 21 days apart</li><li>Two doses for the Moderna vaccine, 28 days apart</li><li>One dose for the Johnson &amp; Johnson’s Janssen vaccine</li></ul>
 <p>If two shots are required, <strong><strong>get your second shot as close to the recommended interval as possible</strong></strong>,<strong> </strong>but not sooner. However, if you can’t get it at the recommended interval, second doses may be given up to 6 weeks (42 days) after the first dose. There is limited data on how well these vaccines work beyond this window. But if the second dose is given after 42 days, there is no need to start over.</p>
 <p>Be sure to get the same COVID-19 vaccine the second time that you got the first time. These vaccines are not interchangeable with each other or with other COVID-19 vaccines. The safety and efficacy of mixing vaccines has not been tested.</p>
 
